# cpp_app

./: .gitignore  CMakeLists.txt  README.md  client.cpp  databasemanager.cpp  databasemanager.h  initial_database_migration.py  myapi.proto  server.cpp  test.db  text.db
